--- a/src/WebClient/tsconfig.app.json
+++ b/src/WebClient/tsconfig.app.json
@@ -20,7 +20,7 @@
 
     /* Linting */
     "forceConsistentCasingInFileNames": true,
-    "strict": true,
+    "strict": false,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
