feat: adding an api layer

--- a/.gitattributes
+++ b/.gitattributes
@@ -8,6 +8,8 @@
 *.csproj text eol=crlf
 *.esproj text eol=crlf
 
+* 			  eol=lf
+
 ###############################################################################
 # Set default behavior for command prompt diff.
 #
