--- a/src/WebClient/tsconfig.app.json
+++ b/src/WebClient/tsconfig.app.json
@@ -15,7 +15,7 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "paths": {
-      "@victorfrye/demo/*": ["./src/*"]
+      "@mockingmirror/*": ["./src/*"]
     },
 
     /* Linting */
