--- a/src/AppHost/AppHost.csproj
+++ b/src/AppHost/AppHost.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Sdk Name="Aspire.AppHost.Sdk" Version="9.0.0" />
 
@@ -7,12 +7,19 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+
     <IsAspireHost>true</IsAspireHost>
-    <UserSecretsId>353d8321-8cea-41fd-b09b-0503c184b4c8</UserSecretsId>
+
+    <AssemblyName>VictorFrye.MockingMirror.AppHost</AssemblyName>
+    <RootNamespace>VictorFrye.MockingMirror.AppHost</RootNamespace>
+
+	<UserSecretsId>353d8321-8cea-41fd-b09b-0503c184b4c8</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Aspire.Hosting.AppHost" Version="9.0.0" />
+    <PackageReference Include="Aspire.Hosting.Azure.Storage" Version="9.0.0" />
+    <PackageReference Include="Aspire.Hosting.NodeJs" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
