--- a/src/ServiceDefaults/ServiceDefaults.csproj
+++ b/src/ServiceDefaults/ServiceDefaults.csproj
@@ -1,10 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+
     <IsAspireSharedProject>true</IsAspireSharedProject>
+
+    <AssemblyName>VictorFrye.MockingMirror.Extensions.ServiceDefaults</AssemblyName>
+    <RootNamespace>VictorFrye.MockingMirror.Extensions.ServiceDefaults</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
