--- a/src/WebClient/tsconfig.app.json
+++ b/src/WebClient/tsconfig.app.json
@@ -15,16 +15,16 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "paths": {
-      "@mockingmirror/*": ["./src/*"]
+      "@mockingmirror/*": ["./app/*"]
     },
 
     /* Linting */
     "forceConsistentCasingInFileNames": true,
-    "strict": false,
+    "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src"]
+  "include": ["app"]
 }
