--- a/src/WebClient/package.json
+++ b/src/WebClient/package.json
@@ -5,7 +5,6 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "serve": "vite",
     "build": "tsc --build && vite build",
     "lint": "eslint --fix .",
     "lint:check": "eslint .",
@@ -15,6 +14,7 @@
     "@fluentui/react-components": "^9.58.1",
     "@fluentui/react-icons": "^2.0.271",
     "@griffel/react": "^1.5.29",
+    "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-responsive": "^10.0.0"
@@ -23,6 +23,7 @@
     "@eslint/js": "^9.17.0",
     "@griffel/tag-processor": "^1.0.12",
     "@griffel/vite-plugin": "^0.1.12",
+    "@types/node": "^22.12.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
