--- a/src/WebClient/tsconfig.node.json
+++ b/src/WebClient/tsconfig.node.json
@@ -14,7 +14,8 @@
     "noEmit": true,
 
     /* Linting */
-    "strict": false,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
