--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -32,6 +32,10 @@ jobs:
       with:
         dotnet-version: ${{ env.DOTNET_VERSION }}
         cache: true
+        cache-dependency-path: |
+          ./src/AppHost/packages.lock.json
+          ./src/ServiceDefaults/packages.lock.json
+          ./src/WebApi/packages.lock.json
 
     - name: Install dependencies
       run: dotnet restore --locked-mode
