--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -32,7 +32,7 @@ jobs:
       with:
         node-version: ${{ env.NODEJS_VERSION }}
         cache: npm
-        cache-dependency-path: ./package-lock.json
+        cache-dependency-path: ./src/WebClient/package-lock.json
 
     - name: Install dependencies
       run: npm ci
