fix: tweak here and there

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -40,6 +40,6 @@ jobs:
     - name: Verify formatting
       run: npm run lint:check
 
-    - name: Build solution
+    - name: Build project
       run: npm run build
     
