--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -32,7 +32,7 @@ jobs:
         dotnet-version: ${{ env.DOTNET_VERSION }}
 
     - name: Install dependencies
-      run: dotnet restore --locked-mode
+      run: dotnet restore
 
     - name: Verify formatting
       run: dotnet format --verify-no-changes --no-restore
