--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,9 +1,10 @@
-name: .NET Build and Test
+name: .NET CI
 
 on:
   push:
     branches: [ "main" ]
   pull_request:
+    types: [opened, synchronize, reopened, closed]
     branches: [ "main" ]
 
 permissions:
@@ -20,6 +21,7 @@ env:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+    name: Build and Test
 
     steps:
     
