--- a/src/WebClient/package.json
+++ b/src/WebClient/package.json
@@ -22,6 +22,7 @@
     "@eslint/js": "^9.17.0",
     "@griffel/tag-processor": "^1.0.12",
     "@griffel/vite-plugin": "^0.1.12",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/node": "^22.12.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
